--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ function myFunction() {
 }
 </script>
 <button type="button"
-onclick="myFunction">
+onclick="myFunction()">
 Click me to display Date and Time.</button>
 
-<p id="demo"></p>
+<p id="demo">JavaScript can change the style of an HTML element !</p>
 
 </body>
 </html> 
