--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Bismillah
 <body>
 
 <h1>My First JavaScript Workshop</h1>
-
+<p id="demo">JavaScript can change the style of an HTML element !</p>
 <script>
 function myFunction() {
   document.getElementById('demo').innerHTML = Date();
