--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Bismillah
 <html>
 <body>
 
-<h1>My First JavaScript Workshop</h1>
+<h1>Our First JavaScriptCity Workshop</h1>
   <h2>https://www.w3schools.com/js/js_exercises.asp</h2>
   
 <p id="demo">... !</p>
